# mcp-google-workspace

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_google_workspace/: __init__.py  server.py
src/mcp_google_workspace/auth/: __init__.py  google_auth.py
src/mcp_google_workspace/docs/: __init__.py
